# logistics

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  conftest.py  docker-compose.yml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
backend/apps/delivery/: apps.py  tasks.py
backend/apps/delivery/admin/: __init__.py  customer.py  customer_address.py  order.py  partner.py  product.py
backend/apps/delivery/migrations/: 0003_initial.py  0004_remove_order_status_order_state.py  0005_alter_order_state.py  0006_order_state_changed_at.py  0007_remove_order_products_orderproduct.py  0008_historicalorder.py
backend/apps/delivery/models/: __init__.py  customer.py  customer_address.py  order.py  partner.py  product.py
backend/apps/delivery/tests/: fixtures.py  test_tasks.py
backend/apps/geo/: apps.py  services.py
backend/apps/geo/admin/: __init__.py  city.py  country.py  region.py  time_zone.py
backend/apps/geo/migrations/: 0002_alter_country_code.py
backend/apps/geo/models/: city.py  country.py  region.py  time_zone.py
backend/apps/geo/tests/: fixtures.py
backend/apps/security/: apps.py  auth.py  services.py
backend/apps/security/api/: __init__.py  endpoints.py  schemas.py
backend/apps/security/tests/: test_auth.py  test_jwt.py  test_services.py
backend/apps/tg_bots/: apps.py  mini_app.py  services.py
backend/apps/tg_bots/admin/: chat.py  user.py
backend/apps/tg_bots/migrations/: 0001_initial.py
backend/apps/tg_bots/models/: __init__.py  chat.py  user.py  user_chat.py
backend/apps/tg_bots/tests/: fixtures.py  test_init_data_validator.py  test_tg_send_message.py
backend/apps/users/: admin.py  apps.py
backend/apps/users/api/: endpoints.py  schemas.py
backend/apps/users/tests/: fixtures.py  test_api_get_self_user.py
backend/core/: .env.example  __init__.py  api.py  celery.py  paginator.py  urls.py  validators.py
backend/core/management/commands/: startapp.py
backend/core/settings/: __init__.py  auth.py  celery.py  common.py  db.py  environ.py  http.py  installed_apps.py  local.py.template  media.py  middleware.py  sentry.py  static.py  telegram.py
backend/core/tests/: fixtures.py  test_cursor_pagination.py  test_utils.py  test_validators.py
frontend/: .prettierignore  README.md  eslint.config.js  index.html  package.json  pnpm-lock.yaml  prettier.config.js  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.vue  main.ts  style.css
frontend/src/api/: auth.ts  orders.ts  users.ts
frontend/src/api/axios/: index.ts  onRequestFulfilled.ts  onResponseFulfilled.ts  onResponseRejected.ts  responseCaseMiddleware.ts
frontend/src/components/: VBottomSheet.vue  VCard.vue  VHeading.vue  VMultiselect.vue  VTextInput.vue  VToast.vue  VToastFeed.vue
frontend/src/components/Order/: VOrderDetail.vue  VOrderDetailBlock.vue  VOrderDetailBlockField.vue  VOrderEdit.vue  VOrderHeader.vue
frontend/src/components/Orders/: VOrdersFilters.vue  VOrdersFiltersTab.vue  VOrdersFiltersTabs.vue  VOrdersItem.vue  VOrdersListItems.vue  VOrdersListLoader.vue
frontend/src/layouts/: VDefaultLayout.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  order.ts  orders.ts  telegram.ts  toasts.ts  user.ts
frontend/src/types/: auth.ts  orders.ts  tabs.ts  users.ts
frontend/src/utils/: auth.ts  date.ts  dictionary.ts  handleRequestError.ts  orders.ts  telegram.ts
frontend/src/views/: VHomeView.vue  VNotAccessedView.vue  VOrderView.vue  VOrdersView.vue
src/apps/delivery/: apps.py  tasks.py
src/apps/delivery/admin/: customer.py  customer_address.py  order.py  partner.py  product.py
src/apps/delivery/migrations/: 0001_initial.py  0002_initial.py
src/apps/delivery/models/: customer.py  customer_address.py  order.py  partner.py  product.py
src/apps/geo/: apps.py  services.py
src/apps/geo/admin/: city.py  country.py  region.py  time_zone.py
src/apps/geo/migrations/: 0001_initial.py
src/apps/geo/models/: __init__.py  city.py  country.py  region.py  time_zone.py
src/apps/orders/: apps.py  tasks.py
src/apps/orders/admin/: __init__.py  customer.py  customer_address.py  order.py  partner.py  product.py
src/apps/orders/api/: endpoints.py
src/apps/orders/migrations/: 0001_initial.py  0002_initial.py  0003_order_delivery_date.py
src/apps/orders/models/: __init__.py  customer.py  customer_address.py  order.py  partner.py  product.py
src/apps/orders/services/: create_order.py  exceptions.py  list_orders.py  list_partners.py  retrieve_order.py
src/apps/security/: apps.py  auth.py  jwt.py  services.py
src/apps/security/api/: endpoints.py
src/apps/tg_bots/: apps.py  mini_app.py  services.py
src/apps/tg_bots/admin/: __init__.py  chat.py  user.py
src/apps/tg_bots/migrations/: 0001_initial.py  0002_initial.py  0003_alter_tguser_user.py
src/apps/tg_bots/models/: chat.py  user.py
src/apps/users/: admin.py  apps.py  models.py
src/apps/users/api/: endpoints.py  schemas.py
src/apps/users/migrations/: 0001_initial.py  0002_alter_user_role.py
src/core/: .env.example  admin.py  api.py  asgi.py  celery.py  models.py  paginator.py  schemas.py  types.py  urls.py  utils.py  validators.py
src/core/management/commands/: startapp.py
src/core/settings/: __init__.py  auth.py  celery.py  common.py  db.py  environ.py  http.py  installed_apps.py  media.py  middleware.py  static.py  telegram.py
tests/: conftest.py
tests/plugins/: django_settings.py
tests/plugins/apps/: delivery.py  geo.py  orders.py  tg_bots.py  users.py
tests/plugins/core/: api.py
tests/test_apps/delivery/: test_tasks.py
tests/test_apps/delivery/api/: conftest.py  test_api_create_order.py  test_api_get_order.py  test_api_get_orders.py  test_create_order.py  test_list_orders.py
tests/test_apps/orders/api/: conftest.py  test_create_order.py  test_list_orders.py
tests/test_apps/security/: test_api.py  test_auth.py  test_jwt.py  test_services.py
tests/test_core/: test_cursor_paginator.py  test_urls.py  test_utils.py  test_validators.py
(+83 files in other folders)
