[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "logistic_backend"
description = ""
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
# django
django = "^5.0.6"
django-axes = "^6.5.0"
django-celery-results = "^2.5.1"
django-environ = "^0.11.2"
django-split-settings = "^1.3.1"
django-stubs-ext = "^5.0.2"
channels = {version = "^4.1.0", extras = ["daphne"]}
# other
attrs = "^23.2.0"
celery = "^5.4.0"
mysqlclient = "^2.2.4"
python-telegram-bot = "^21.3"
redis = "^5.0.7"

[tool.poetry.group.dev.dependencies]
# django
django-debug-toolbar = "^4.4.2"
django-stubs = "^5.0.2"
# tests
pytest = "^8.2.2"
pytest-django = "^4.8.0"
pytest-cov = "^5.0.0"
covdefaults = "^2.3.0"
pytest-randomly = "^3.15.0"
pytest-timeout = "^2.3.1"
# other
black = "^24.4.2"
ipython = "^8.26.0"
pre-commit = "^3.7.1"
ruff = "^0.5.0"

[tool.django-stubs]
django_settings_module = "core.settings"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "core.settings"
addopts = "--cov=. --cov-report=term-missing:skip-covered --cov-report=html --cov-fail-under=0"
python_files = "test*.py"
pythonpath = ". src"
# Timeout for tests, so they can not take longer than this amount of seconds.
# (https://pypi.org/project/pytest-timeout/)
timeout = 5

[tool.coverage.run]
plugins = ["covdefaults"]

[tool.black]
line-length = 88
target-version = ['py312']
extend-exclude = '''
/(
  venv
  | .venv
  | migrations
)
'''

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = [
    ".git",
    ".github",
    ".ruff_cache",
    ".venv",
    "__pypackages__",
    "migrations",
    "settings",
    "venv",
]

[tool.ruff.lint]
# https://beta.ruff.rs/docs/rules/
select = ["ALL"]
fixable = ["I"]
ignore = [
    "ANN401",  # dynamically typed expressions (typing.Any) are disallowed in `{}`
    "ARG001",  # Unused function argument: `kwargs`
    "ARG002",  # unused method argument: `{}`
    "ARG004",  # Unused static method argument: `context`
    "COM812",  # trailing comma missing
    "D100",  # missing docstring in public module
    "D101",  # missing docstring in public class
    "D102",  # missing docstring in public method
    "D103",  # missing docstring in public function
    "D104",  # missing docstring in public package
    "D105",  # missing docstring in magic method
    "D106",  # missing docstring in public nested class
    "D107",  # missing docstring in `__init__`
    "D200",  # one-line docstring should fit on one line
    "D202",  # no blank lines allowed after function docstring (found {})
    "D203",  # 1 blank line required before class docstring
    "D205",  # 1 blank line required between summary line and description
    "D209",  # multi-line docstring closing quotes should be on a separate line
    "D210",  # no whitespaces allowed surrounding docstring text
    "D212",  # multi-line docstring summary should start at the first line
    "D213",  # multi-line docstring summary should start at the second line
    "D400",  # first line should end with a period
    "D401",  # first line of docstring should be in imperative mood: "{}"
    "D404",  # first word of the docstring should not be "This"
    "D415",  # first line should end with a period, question mark, or exclamation point
    "EM101",  # exception must not use a string literal, assign to variable first
    "INP001",  # file `{}` is part of an implicit namespace package. Add an `__init__.py`
    "RUF001",  # string contains ambiguous `{}` [...]
    "RUF002",  # docstring contains ambiguous `{}` [...]
    "RUF003",  # Comment contains ambiguous `{}` [...]
    "RUF005",  # consider iterable unpacking instead of concatenation"
    "RUF009",  # do not perform function call `{}` in dataclass defaults
    "RUF012",  # mutable class attributes should be annotated with `typing.ClassVar`
    "RUF015",  # prefer next({iterable}) over single element slice
    "RUF100",  # unused `noqa` directive (unknown: `{}`)
    "S101",  # use of `assert` detected
    "TD002",  # Missing author in TODO; try: `# TODO(<author_name>): ...` or `# TODO @<author_name>: ...
    "TD003",  # Missing issue link on the line following this TODO
    "TD005",  # Missing issue description after `TODO`
    "TRY003",  # avoid specifying long messages outside the exception class
]

[tool.ruff.lint.isort]
known-local-folder = ["apps", "core"]

[tool.pyright]
executionEnvironments = [{root = "src"}]
